css, layouts: fix overflow on mobile
Tooltips can be extremely long, especially on mobile. It turns out that
most mobile web browsers ignore the overflow attributes on the body and
html elements, so we create another wrapper with this attribute and
adjust margins on the body and this wrapper so as not to clip the
tooltips should they go off screen.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,9 +6,14 @@
 }
 
 body {
-    overflow-x: hidden;
+    margin: 0;
     background-color: #0f0f12;
     font-family: "Open Sans";
+}
+
+.wrapper-outer {
+    overflow-x: hidden;
+    padding: 8px;
 }
 
 .wrapper {
